# xml-validator

./: .gitignore  README.md  config.yaml  profiles.yaml  pyproject.toml  requirements.txt
scripts/: download_dependencies.py
xml_validator/: __init__.py  __main__.py  cli.py  config.py  config.yaml  schematron.py  utils.py  validate.py
