[project]
name = "xml-validator"
dynamic = ["version"]   # versie dynamisch

[tool.setuptools.dynamic]
version = {attr = "xml_validator.__version__"}

description = "Validate XML files using XSD or Schematron"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml",
    "tqdm"
]

[project.scripts]
validate-xml = "xml_validator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
